--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -43,6 +43,9 @@ jobs:
       - name: Install Dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Run Build
+        run: pnpm run build --public-url /${{ github.event.repository.name }}
+
       - name: Setup GitHub Pages
         uses: actions/configure-pages@v5
         with:
