--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -46,12 +46,14 @@ jobs:
       - name: Run Build
         run: pnpm run build --public-url /${{ github.event.repository.name }}
 
-      - name: Enable GitHub Pages
+      - name: Check GitHub Pages Source
         run: |
-          gh api --method PUT \
-            -H "Accept: application/vnd.github+json" \
-            /repos/${{ github.repository }}/pages \
-            -f build_type=workflow
+          SOURCE=$(gh api /repos/${{ github.repository }}/pages --jq '.build_type')
+          if [ "$SOURCE" != "workflow" ]; then
+            echo "❌ GitHub Pages is not set to use GitHub Actions. Current source: $SOURCE"
+            exit 1
+          fi
+          echo "✅ GitHub Pages is correctly set to use GitHub Actions."
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
