--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -63,6 +63,9 @@ jobs:
         with:
           enablement: true
 
+      - name: Disable Jekyll
+        run: touch ./dist/.nojekyll
+
       - name: Upload Artifact
         uses: actions/upload-pages-artifact@v3
         with:
