--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -44,7 +44,7 @@ jobs:
           pnpm run build --public-url /${{ github.event.repository.name }}
 
       - name: Check and Deploy to GitHub Pages
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push' && !github.event.repository.fork
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
@@ -53,8 +53,6 @@ jobs:
             echo "❌ ERROR: GitHub Pages is not set to deploy from a branch! Please update the settings to deploy from the correct branch."
             echo "🔗 Enable it here: https://github.com/${{ github.repository }}/settings/pages (Scroll down to 'Build and Deployment > Source')"
             exit 1
-          fi
-          echo "✅ GitHub Pages is correctly set to deploy from a branch."
       - uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
