--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -17,7 +17,7 @@ concurrency:
   cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
 
 jobs:
-  build-deploy:
+  build:
     runs-on: ubuntu-latest
     outputs:
       deployment-type: ${{ steps.detect-deployment.outputs.type }}
