--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -56,6 +56,9 @@ jobs:
       name: github-pages
       url: ${{ steps.deploy.outputs.page_url }}
     steps:
+      - name: Debug Build Output
+        run: ls -la
+
       - name: Configure Pages
         uses: actions/configure-pages@v5
 
