--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -90,6 +90,9 @@ jobs:
           mkdir -p dist
           tar -xvf ./artifact.tar -C dist
 
+      - name: Configure Pages
+        uses: actions/configure-pages@v5
+
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
